Fix: Avoid sidebar items overflow
On low height viewports the last items on the sidebar would overflow their box.
The box should instead be stretched to make every item fit inside

--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
-html, body, .container {
+html, body {
     height: 100%;
 }
 
 .container {
+    min-height: 100%;
     background-color: rgb(191, 255, 0);
     display: grid;
     grid-template-areas:
